# Snake

./: .gitignore  Apple.cpp  Apple.h  CMakeLists.txt  GameState.cpp  GameState.h  Menu.cpp  Menu.h  SFMLClass.cpp  SFMLClass.h  SnakeArea.cpp  SnakeArea.h  SnakeBody.cpp  SnakeBody.h  SnakeObject.cpp  SnakeObject.h  main.cpp
textfiles/: results.txt
